cmake_minimum_required(VERSION 3.21)

project(CmakeTest LANGUAGES CXX)

add_executable(${PROJECT_NAME} test.cpp )

file(COPY ${WORKSPACE}//Assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${ASSIMP_SHARED} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${OPENCV_SHARED} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

target_link_libraries(${PROJECT_NAME}
    external
    slCodec
    Immortal
)

set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY
    ${IMMORTAL_RUMTIME_DIR}/bin )
set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY
    ${IMMORTAL_RUMTIME_DIR}/lib )
